--- a/assets/css/laout.css
+++ b/assets/css/laout.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     grid-area: menu;
-    background-color: aqua;
+    background-color: #f36fb2;
     margin: 0;
 }
 .nav p{
@@ -33,7 +33,7 @@ header{
     justify-content: center;
     align-items: center;
     grid-area: header;
-    background-color: beige;
+    background-color: #fdb3e5;
 }
 header select{
     width: 80vw;
@@ -43,14 +43,18 @@ main{
     display: flex;
     justify-content: space-around;
     grid-area: main;
+    background-color: #ffd3ff;
 }
 footer{
     display: flex;
     flex-direction: column;
     align-items: center;
     grid-area: footer;
-    background-color: bisque;
+    background-color: #fdb3e5;
     justify-content: center;
+}
+.btnc{
+    background-color: #fdb3e5;
 }
 .flexboxc{
     display: flex;
@@ -77,10 +81,13 @@ footer{
 .galeria{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+}
+.galeria ul{
+    padding-left: 0px;
+    ;
 }
 .card{
-    margin: 1rem;
+    margin: 5px;
 }
 .grid-container{
     display: grid;
@@ -104,6 +111,7 @@ footer{
     align-items: center;
     justify-content: center;
     grid-area: pagina;
+    background-color: #ffd3ff;
     
 }
 @media (max-width: 576px){
@@ -118,7 +126,7 @@ footer{
         "footer";
     }
     .galeria{
-        grid-template-columns: 1fr;
+        justify-content: center;
     }
     .nav{
         display: flex;
@@ -126,11 +134,8 @@ footer{
         justify-content: space-around;
         flex-direction: row;
     }
-    .nav p{
-        margin: 0;
-    }
     .cardt{
-        width: 60vw;
+        width: 65vw;
     }
     .nav h1{
         display: block;
